--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,256 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700&display=swap');
+
+
+/* ASSETS
+font-family: 'Lato', sans-serif;
+font-family: 'Merriweather', serif;
+
+
+Farbe:
+#202020,
+#24bff2,
+#fff,
+#F5FBFE.
+
+Farbe social media:
+#3b5998,
+#fcaf45,
+#55acee,
+#c4302b
+ */
+
+
+/* --------------------------
+GENERAL STYLE
+ ----------------------------- */
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Merriweather', serif;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+/* --------------------------
+NAV STYLE
+ ----------------------------- */
+
+nav {
+    font-family: 'Lato', sans-serif;
+    text-align: right;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 20px 10px 0 40px;
+    margin: 0 10px 0 0;
+}
+
+nav ul li a {
+    color: #000;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+}
+
+/* --------------------------
+HEADER STYLE
+ ----------------------------- */
+
+.mainSection {
+    margin: 10vh 0 0 0;
+}
+
+.text {
+    display: inline-block;
+    width: 40%;
+    margin: 20vh 0 0 10vw;
+    vertical-align: top;
+}
+
+.text p {
+    font-size: 1.8rem;
+    margin: 10px 0 30px 0;
+}
+
+.image {
+    width: 20%;
+    margin: 0 0 0 20vw;
+    display: inline-block;
+}
+
+.image img {
+    width: 90%;
+    margin: 10vh 10vw 0 0;
+}
+
+.text a {
+    font-size: 1.6rem;
+    padding: 15px 30px;
+    text-decoration: none;
+    margin: 0 20px 0 0;
+}
+
+/* --------- BUTTONS */
+
+.buttonBlack {
+    color: #fff;
+    background: #000;
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+
+.buttonWhite {
+    color: #000;
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
+.buttonBlack:hover,
+.buttonWhite:hover {
+    -webkit-filter: invert(1);
+}
+
+/* --------------------------
+MAIN STYLE
+ ----------------------------- */
+
+#illustrations,
+#examples {
+    text-align: center;
+    width: 80%;
+    margin: 20vh auto;
+}
+
+#download,
+#suggestions {
+    text-align: center;
+    width: 90%;
+    margin: 20vh auto;
+}
+
+.textCenter {
+    margin: 15vh 0 0 0;
+}
+
+.textCenter p {
+    width: 50%;
+    font-size: 1.8rem;
+    margin: 10px auto 30px auto;
+}
+
+.imageCenter {
+    width: 100%;
+    display: inline-block;
+}
+
+.imageCenter img {
+    width: 30%;
+    margin: 5vh auto;
+}
+
+.imageExample {
+    width: 100%;
+    display: inline-block;
+}
+
+.imageExample img {
+    width: 30%;
+    margin: 5vh 3% 3% 3%;
+}
+
+.membership {
+    background-color: #f5fbfe;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 40px;
+}
+
+#membership ul {
+    list-style: none;
+}
+
+#membership li {
+    line-height: 1.8rem;
+}
+
+#membershipHeadline {
+    font-size: 2rem;
+}
+
+#membershipPrice {
+    font-size: 4rem;
+    margin: 25px;
+}
+
+#membershipSubHeadline {
+    font-size: 1.5rem;
+    margin: 0 0 15px 0;
+}
+
+#memberButton {
+    display: block;
+    color: #fff;
+    background-color: #24bff2;
+    text-decoration: none;
+    padding: 10px 30px 10px 30px;
+    border-radius: 10px;
+    margin: 20px;
+
+}
+
+/* --------------------------
+FOOTER STYLE
+ ----------------------------- */
+
+#suggestions {
+    margin-bottom: 20px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #000
+}
+
+footer p {
+    padding: 1.5rem;
+}
+
+footer p:nth-of-type(1),
+footer p:nth-of-type(2) {
+    color: lightgrey;
+}
+
+/* footer span {
+} */
+
+/* Coloration of Social-dots */
+
+#fb {
+    color: #3b5998;
+}
+
+#ig {
+    color: #fcaf45;
+}
+
+#tw {
+    color: #55acee;
+}
+
+#yt {
+    color: #c4302b;
 }
