--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700&display=swap');
 
 
-/* ASSETS
+/* -------------------------
+            ASSETS
+----------------------------
+
+------------FONTS-----------
 font-family: 'Lato', sans-serif;
 font-family: 'Merriweather', serif;
 
-
+-----------COLORS-----------
 Farbe:
 #202020,
 #24bff2,
@@ -69,6 +73,8 @@ nav ul li a {
 HEADER STYLE
  ----------------------------- */
 
+/* classes also used in <main> */
+
 .mainSection {
     margin: 10vh 0 0 0;
 }
@@ -103,7 +109,7 @@ HEADER STYLE
     margin: 0 20px 0 0;
 }
 
-/* --------- BUTTONS */
+/* --------- BUTTONS ---------*/
 
 .buttonBlack {
     color: #fff;
@@ -152,7 +158,12 @@ MAIN STYLE
     margin: 10px auto 30px auto;
 }
 
-.imageCenter {
+.imageCenter img:hover {
+    border: 1px solid darkgrey;
+}
+
+.imageCenter,
+.imageExample {
     width: 100%;
     display: inline-block;
 }
@@ -162,15 +173,12 @@ MAIN STYLE
     margin: 5vh auto;
 }
 
-.imageExample {
-    width: 100%;
-    display: inline-block;
-}
-
 .imageExample img {
     width: 30%;
     margin: 5vh 3% 3% 3%;
 }
+
+/* ------- Styling Membership-form */
 
 .membership {
     background-color: #f5fbfe;
@@ -215,9 +223,18 @@ MAIN STYLE
 /* --------------------------
 FOOTER STYLE
  ----------------------------- */
+footer {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
 
-#suggestions {
-    margin-bottom: 20px;
+footer h1 {
+    margin: 0 0 30px 0;
+}
+
+.suggestions {
+    text-align: center;
+    margin: 30px auto 20px auto;
 }
 
 footer a {
@@ -234,8 +251,14 @@ footer p:nth-of-type(2) {
     color: lightgrey;
 }
 
-/* footer span {
-} */
+footer p:last-child {
+    padding: 0;
+}
+
+footer a {
+    text-decoration: none;
+    color: #000;
+}
 
 /* Coloration of Social-dots */
 
